# actix-mono

./: .gitignore  Cargo.toml  README.md
back-office/: Cargo.toml
back-office/src/: main.rs
back-office/src/api/: user.rs
back-office/src/route/: mod.rs  user_route.rs
front-office/: Cargo.toml
shared/: Cargo.toml
shared/migrations/2025-12-18-082453-0000_user/: up.sql
shared/src/: lib.rs
shared/src/common/: presenter.rs
shared/src/config/: database.rs
shared/src/db/: connection.rs  schema.rs
shared/src/error/: app_error.rs
shared/src/models/: user.rs
shared/src/repository/: user.rs
