[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
chrono = "0.4.42"
derive_more = "2.1.0"
diesel = { version = "=2.3.4", features = ["64-column-tables", "chrono", "postgres", "r2d2", "serde_json"] }
dotenv = "0.15.0"
once_cell = "1.21.3"
serde = { version = "1.0.228", features = ["derive"] }
